tests/ui/basic/add/twice.stderr
error: added value here
  --> tests/ui/basic/add/twice.rs:6:13
   |
LL |     let w = x + y + z;
   |             -^^^-
   |             |   |
   |             |   second value here
   |             first value here
   |
   = note: `#[deny(rpl::foo)]` on by default

error: added value here
  --> tests/ui/basic/add/twice.rs:6:13
   |
LL |     let w = x + y + z;
   |             -----^^^-
   |             |       |
   |             |       second value here
   |             first value here

error: aborting due to 2 previous errors

